--- a/index.html
+++ b/index.html
@@ -52,13 +52,13 @@
 						<tbody>
 							<tr>
 								<td>
-									<a href="/assets/content/MLG-MATAN.pdf"><h1>Laba 1</h1></a>
+									<a href="suertero.github.io/assets/content/MLG-MATAN.pdf"><h1>Laba 1</h1></a>
 								</td>
 								<td>
-									<a href="/assets/content/index.html"><h1>Laba 2</h1></a>
+									<a href="suertero.github.io/assets/content/index.html"><h1>Laba 2</h1></a>
 								</td>
 								<td>
-									<a href="/assets/content/Лаба№3 - Latex.html"><h1>Laba 3</h1></a>
+									<a href="suertero.github.io/assets/content/Лаба№3 - Latex.html"><h1>Laba 3</h1></a>
 								</td>
 							</tr>
 						</tbody>
