--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
 								<td>
 									<a href="suertero.github.io/assets/content/Лаба№3 - Latex.html"><h1>Laba 3</h1></a>
 								</td>
+								<td>
+									<a href="suertero.github.io/assets/content/parcer.xml"><h1>Laba 4</h1></a>
+								</td>
 							</tr>
 						</tbody>
 					</table>
