--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 									<a href="suertero.github.io/assets/content/parcer.xml"><h1>Laba 4.2</h1></a>
 								</td>
 								<td>
-									<a href="suertero.github.io/assets/content/курсовая робот Kill them.epub"><h1>Laba 6</h1></a>
+									<a href="suertero.github.io/assets/content/_Kill_them.epub"><h1>Laba 6</h1></a>
 								</td>
 								<td>
 									<a href="suertero.github.io/assets/content/Макрос.bas"><h1>Laba 7</h1></a>
